--- a/XFGoogleMapSample/XFGoogleMapSample/XFGoogleMapSample.local.csproj
+++ b/XFGoogleMapSample/XFGoogleMapSample/XFGoogleMapSample.local.csproj
@@ -38,6 +38,7 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
+    <PackageReference Include="Xamarin.Build.Download" Version="0.9.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Properties\AssemblyInfo.cs" />
